--- a/README.Rmd
+++ b/README.Rmd
@@ -150,7 +150,7 @@ corpus <- construct_corpus(
   
 ```
 
-This corpus of dataframes is a standardized way to analyze a programming project as a collection of documents. Learn more about these df with the [vignette of `construct_corpus()`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html).
+This corpus of dataframes is a standardized way to analyze a programming project as a collection of documents, see the [vignette of `construct_corpus()`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html). Some of these df have classes `citations.network` of `internal.dependencies`, a network of functions or files. See the [vignette of `citations.network` `dataframe`](https://clement-lvd.github.io/codexplor/articles/vignette_citations.network_df_of_internal.dependencies.html).
 
 **2. See a dataviz' from a corpus.list.** Given a `corpus.list`, look at the dataviz' of a `citations.network` `data.frame` with `codexplor::get_networkd3_from_igraph` :
 
@@ -174,6 +174,8 @@ webshot2::webshot("man/figures/network_codexplor_fn.html", file = "man/figures/f
 
 > These dataviz are useful for pinpointing where to start a polishing loop, identifying all the functions impacted by upcoming changes, [...] or assessing the impact of a new dev loop on the project's complexity.
 
+Look a dataviz of the *files* (`corpus$functions.network`) : [vignette of example of files network](https://clement-lvd.github.io/codexplor/articles/vignette_analyse_citations_network_from_project.html)
+
 ---
 
 ### Vignettes
@@ -184,13 +186,13 @@ webshot2::webshot("man/figures/network_codexplor_fn.html", file = "man/figures/f
 
 fn_segmentation <- data.frame(
 "High-level" = c(
-"Turn a programming project into a corpus and look at a dataviz of the files : [vignette of example of documents network](https://clement-lvd.github.io/codexplor/articles/vignette_analyse_citations_network_from_project.html)"
+""
 
 , " "
                 )
 , 
 "Low-level" = c( "Construct a corpus : [vignette of `construct_corpus()`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html)", 
-              "Middle-level" = "Understand the `citations.network` of `internaldependencies` : [vignette of `citations.network` `dataframe`](https://clement-lvd.github.io/codexplor/articles/vignette_citations.network_df_of_internal.dependencies.html)" 
+              "Middle-level" = "" 
                  
   
                               )
