--- a/README.Rmd
+++ b/README.Rmd
@@ -150,7 +150,7 @@ corpus <- construct_corpus(
   
 ```
 
-This corpus of dataframes is a standardized way to analyze a programming project as a collection of documents, see the [vignette of `construct_corpus()`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html). Some of these df have classes `citations.network` of `internal.dependencies`, a network of functions or files. See the [vignette of `citations.network` `dataframe`](https://clement-lvd.github.io/codexplor/articles/vignette_citations.network_df_of_internal.dependencies.html).
+This corpus of dataframes is a standardized way to analyze a programming project as a collection of documents, see the [vignette of `construct_corpus()`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html). Some of these df have classes `citations.network` of `internal.dependencies`, a network of functions or files. See the [vignette of these `citations.network` `dataframes`](https://clement-lvd.github.io/codexplor/articles/vignette_citations.network_df_of_internal.dependencies.html).
 
 **2. See a dataviz' from a corpus.list.** Given a `corpus.list`, look at the dataviz' of a `citations.network` `data.frame` with `codexplor::get_networkd3_from_igraph` :
 
@@ -174,36 +174,18 @@ webshot2::webshot("man/figures/network_codexplor_fn.html", file = "man/figures/f
 
 > These dataviz are useful for pinpointing where to start a polishing loop, identifying all the functions impacted by upcoming changes, [...] or assessing the impact of a new dev loop on the project's complexity.
 
-Look a dataviz of the *files* (`corpus$functions.network`) : [vignette of example of files network](https://clement-lvd.github.io/codexplor/articles/vignette_analyse_citations_network_from_project.html)
+Similarly, you have the possibility to look for a dataviz of the *files* with the following : 
+
+      get_networkd3_from_igraph(corpus$files.network)
+      
+See an [example of a files network](https://clement-lvd.github.io/codexplor/articles/vignette_analyse_citations_network_from_project.html).
 
 ---
 
 ### Vignettes
 
-`codexplor` offers functions that are dedicated to analyze a programming project, accordingly to subanalysis tools. 
-
-```{r table-functions, echo=FALSE}
-
-fn_segmentation <- data.frame(
-"High-level" = c(
-""
-
-, " "
-                )
-, 
-"Low-level" = c( "Construct a corpus : [vignette of `construct_corpus()`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html)", 
-              "Middle-level" = "" 
-                 
-  
-                              )
-)
-
-names(fn_segmentation) <- c("Quick example" , "Underlying details" )
-
-knitr::kable(fn_segmentation, row.names = F)
+- See the [vignette of `construct_corpus()`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html). 
 
 
-```
-
-`codexplor` also offers helper functions, e.g., for create and filter a network with the `igraph` package, see the [vignette of helper functions for igraph object and dataviz](https://clement-lvd.github.io/codexplor/articles/manage_igraph_object.html)
+- `codexplor` also offers helper functions, e.g., for create and filter a network with the `igraph` package, see the [vignette of helper functions for igraph object and dataviz](https://clement-lvd.github.io/codexplor/articles/manage_igraph_object.html)
 
