add proper n_params metrics and clean construct_corpus

--- a/README.Rmd
+++ b/README.Rmd
@@ -33,7 +33,12 @@ require(codexplor)
 
 `codexplor` offers **R** functions dedicated to explore, analyze and monitor a programming project.
 
-Given a programming project, `codexplor` compute standardized text mining metrics and dataviz' about the project. Get rid of global complexity with a network of internal dependancies, and assess local complexity with document-level and function-level metrics (e.g., identify files with many functions, the longest functions, and those with numerous internal dependencies within the project).
+Given a programming project, `codexplor` compute standardized text mining metrics and dataviz' about the project. 
+
+- Get rid of global complexity with **networks of internal dependencies**, 
+- Assess local complexity with 
+    - **document-level** (e.g., identify files with many functions defined in)
+    - and **function-level metrics** (e.g., longest functions, those with numerous parameters or internal dependencies).
 
 > `codexplor` help me to figure out the big picture of a programming project faster, and to manage it more efficiently.
 
@@ -52,8 +57,67 @@ The default settings of `codexplor` are optimized for analyzing a project in ![R
 ---
 
 
+### Example
+
+**1. Turn a programming project into a corpus.** Given folder(s) and/or github repo(s) and programming language(s), `codexplor::construct_corpus` will return a `list` of dataframes : the programming project is turned into a corpus.
+
+```{r compute-corpus-of-func, echo=TRUE}
+library(codexplor)
+# Construct a corpus with local folder
+corpus <- construct_corpus(folders = getwd(), languages = "R" )
+```
+
+This corpus of dataframes is a standardized way to analyze a programming project as a collection of documents, see the [vignette of `construct_corpus()`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html). 
+
+
+
+**2. See a dataviz' from a corpus.list.** Given a `corpus.list`, look at the dataviz' of an `internal.dependencies` network with `codexplor::get_networkd3_from_igraph` :
+
+```{r compute-network-of-func,  results='asis', echo=TRUE}
+# Produce an interactive dataviz' with the network of internal.dependencies
+dataviz <- get_networkd3_from_igraph(corpus$functions.network
+, title_h1 = "codexplor. Graph of internal dependancies : functions network"
+, subtitle_h2 = "Color and links = indegrees") 
+# herafter an image (non-interactive) of the interactive dataviz ↓
+```
+
+```{r save-plot, include=FALSE, results='asis'}
+ 
+networkD3::saveNetwork( dataviz, "man/figures/network_codexplor_fn.html")   
+webshot2::webshot("man/figures/network_codexplor_fn.html", file = "man/figures/force_network.png"  )
+
+```
+
+`r knitr::include_graphics("man/figures/force_network.png")`
+
+> These dataviz are useful for pinpointing where to start a polishing loop, identifying all the functions impacted by upcoming changes, [...] or assessing the impact of a new dev loop on the project's complexity.
+
+Or look for a dataviz of the *files* with the following : 
+
+      get_networkd3_from_igraph(corpus$files.network)
+      
+See an [example of a files network](https://clement-lvd.github.io/codexplor/articles/vignette_analyse_citations_network_from_project.html).
+
+---
+
+### Vignettes
+
+- See the [vignette of `construct_corpus()`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html). 
+
+- See the [vignette of the `citations.network` of `internal.dependencies` dataframes](https://clement-lvd.github.io/codexplor/articles/vignette_citations.network_df_of_internal.dependencies.html).
+
+- `codexplor` also offers helper functions, e.g., for create and filter a network with the `igraph` package, see the [vignette of helper functions for igraph object and networkD3 dataviz](https://clement-lvd.github.io/codexplor/articles/manage_igraph_object.html)
+
+
+
 ### Features 
-Given a programming project `codexplor` will compute several standardized metrics, in order to gain global and local insights on the project. 
+Given programming project(s), `codexplor::construct_corpus` will compute several standardized metrics and answer a `corpus.list` of dataframes :
+
+- The `functions` `data.frame` give insights about each functions of the project(s), e.g., number of parameters, number of internal dependencies, length of the code.
+
+- The `files` `data.frame` give insights about each files, e.g., quantify number of functions within files and assess critical internal dependencies.
+
+- The `files.network` and `functions.network` are networks of internal dependencies within the project(s). 
 
 ```{r table-features, echo=FALSE}
 # library(knitr)
@@ -72,7 +136,7 @@ features <- data.frame(Feature = c(
            
          , Local_insights = c( "Appreciate **global** complexity and reveal critical files, e.g., major internal dependancies, clusters of 'difficult-to-read' files" 
           ,  "Assess each **file**, e.g., length and files readability, number of functions within a file"  # 2 : document-level text-mining
-           , "Assess each **function**, e.g., those with a lot of internal dependencies"
+           , "Assess each **function**, e.g., number of parameters or number of internal dependencies"
            , "Assess each **line**, e.g., find the longest")
 )
 
@@ -134,58 +198,3 @@ Other languages are planned.
 
 
 </div>
-
-
-### Example
-
-**1. Turn a programming project into a corpus.** Given folder(s) and/or github repo(s) and programming language(s), `codexplor::construct_corpus` will return a `list` of dataframes : the programming project is turned into a corpus.
-
-```{r compute-corpus-of-func, echo=TRUE}
-library(codexplor)
-
- # Construct a corpus and a Citations network
-corpus <- construct_corpus(
-  folders = getwd()
-  , languages = "R" )
-  
-```
-
-This corpus of dataframes is a standardized way to analyze a programming project as a collection of documents, see the [vignette of `construct_corpus()`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html). Some of these df have classes `citations.network` of `internal.dependencies`, a network of functions or files. See the [vignette of these `citations.network` `dataframes`](https://clement-lvd.github.io/codexplor/articles/vignette_citations.network_df_of_internal.dependencies.html).
-
-**2. See a dataviz' from a corpus.list.** Given a `corpus.list`, look at the dataviz' of a `citations.network` `data.frame` with `codexplor::get_networkd3_from_igraph` :
-
-```{r compute-network-of-func,  results='asis', echo=TRUE}
-# Produce an interactive dataviz' with the network of internal.dependencies
-dataviz <- get_networkd3_from_igraph(corpus$functions.network
-, title_h1 = "codexplor. Graph of internal dependancies : functions network"
-, subtitle_h2 = "Color and links = indegrees") 
-
-# herafter an image (non-interactive) of the interactive dataviz ↓
-```
-
-```{r save-plot, include=FALSE, results='asis'}
- 
-networkD3::saveNetwork( dataviz, "man/figures/network_codexplor_fn.html")   
-webshot2::webshot("man/figures/network_codexplor_fn.html", file = "man/figures/force_network.png"  )
-
-```
-
-`r knitr::include_graphics("man/figures/force_network.png")`
-
-> These dataviz are useful for pinpointing where to start a polishing loop, identifying all the functions impacted by upcoming changes, [...] or assessing the impact of a new dev loop on the project's complexity.
-
-Similarly, you have the possibility to look for a dataviz of the *files* with the following : 
-
-      get_networkd3_from_igraph(corpus$files.network)
-      
-See an [example of a files network](https://clement-lvd.github.io/codexplor/articles/vignette_analyse_citations_network_from_project.html).
-
----
-
-### Vignettes
-
-- See the [vignette of `construct_corpus()`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html). 
-
-
-- `codexplor` also offers helper functions, e.g., for create and filter a network with the `igraph` package, see the [vignette of helper functions for igraph object and dataviz](https://clement-lvd.github.io/codexplor/articles/manage_igraph_object.html)
-
