--- a/vignettes/vignette_citations.network_df_of_internal.dependencies.Rmd
+++ b/vignettes/vignette_citations.network_df_of_internal.dependencies.Rmd
@@ -55,48 +55,6 @@ knitr::kable(nett)
 2. The functions that calls these functions are identified, e.g., a function is calling `'Pier('`, `'pol('` and `'jak('` and the function is linked to these 3 functions.
 3. Similarly, a network of files is constructed, e.g., the code of a programming file is calling `'Pier('`, `'pol('` and `'jak('` and this file is linked to the files where these functions are defined.
 
-**Match functions names.** `construct_corpus` rely on some default patterns, designed to analyze a programming project in a standardized way. 
-Accordingly to these patterns, `construct_corpus` will :
-
-1. read the files accordingly to their extension, e.g., R language is associated with `'.R'` files. 
-2. process commented lines accordingly to each language definition, e.g., R & Python use `'#'` and don't allow multi-lines comments, contrary to JavaScript.
-3. isolate the exposed content, i.e. not quoted and not within a `'{ }'`.
-4. extract functions names from the exposed content, in order to list the internally exposed functions of the programming project.
-
-**Examples.** The hereafter table show some examples of a `hello` function defined in several languages : `construct_corpus` have to match `'hello'`, despite of the differences between languages.
-
-```{r table-langages-differences, echo=FALSE, message=FALSE, warning=FALSE}
-require(codexplor)
-listee <- get_def_regex_by_language(return_examples = T)
-# from our function in raw-data
-tablee <- do.call(rbind.data.frame,  listee) 
-
-table <- tablee[,!colnames(tablee) %in% c("regex_func_name" , "fn_regex", "local_file_ext", "nested_codes")]
-
-colnames(table) <- gsub(x=colnames(table), "_|delim_pair_", " ")
-
-table <- table[order(rownames(table)), ]  
-
-knitr::kable(table)
-
-```
-
-Here, R is the only language that assign an anonymous function to an object. Thus, contrary to other languages, we have to find the name of R functions before the keyword 'function', R parameters names are within the parenthesis after 'function(', etc. 
-
-## Unmatched definition
-**Python.** The function 'hello' defined as a lambda (anonymous) function within the Python line hereafter is not matched yet by `construct_corpus` :
-
-     hello = lambda: None
-
-**R.** The re-assigning of an anonymous R function to a new R object is not supported yet :
-      
-      aaa <- function(i, a){i + a} # construct_corpus match the 'aaa' function
-       my_func_a <- aaa    #  but don't notice the creation of an alias
-      my_func_a(1,2) # will not be matched during the post-processing 
-
-<!-- **JS.** Another caveat unsupported - yet - is the 'hello' javascript function defined hereafter : -->
-
-<!--      const hello = (a, b) => a + b; -->
 
 ## Function call that are non-supported during 2nd matches
 Some way of writing a program are not fully supported during the 2nd matches.
@@ -124,6 +82,6 @@ Junk nodes needs to be excluded from the returned networks, such as the lines wh
 
       construct_corpus("~", languages = "R", exclude_quoted_content = TRUE) 
       
-Be aware that all the quoted text will be avoided, if you've included some - fancy - way of *call* a function as a quoted `character` chain.
+Be aware that all the quoted text will be avoided during the search for functions names, if you've included some - fancy - way of *call* a function as a quoted `character` chain.
 
 
