--- a/README.Rmd
+++ b/README.Rmd
@@ -59,7 +59,7 @@ The default settings of `codexplor` are optimized for analyzing a project in ![R
 
 ### Example
 
-**1. Turn a programming project into a corpus.** Given folder(s) and/or github repo(s) and programming language(s), `codexplor::construct_corpus` will return a `list` of dataframes : the programming project is turned into a corpus.
+**1. Turn a programming project into a corpus.** Given folder(s) and/or github repo(s) and programming language(s), `codexplor::construct_corpus` will return a `list` of dataframes : the programming project is turned into a text-mining corpus.
 
 ```{r compute-corpus-of-func, echo=TRUE}
 library(codexplor)
@@ -67,9 +67,9 @@ library(codexplor)
 corpus <- construct_corpus(folders = getwd(), languages = "R" )
 ```
 
-This corpus of dataframes is a standardized way to analyze a programming project as a collection of documents, see the [vignette of `construct_corpus()`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html). 
+This corpus of dataframes is a standardized way to analyze a programming project as a collection of documents and get insights on the functions and the files of the project, see the [vignette of `construct_corpus()`](https://clement-lvd.github.io/codexplor/articles/vignette_construct_corpus.html). 
 
-
+---
 
 **2. See a dataviz' from a corpus.list.** Given a `corpus.list`, look at the dataviz' of an `internal.dependencies` network with `codexplor::get_networkd3_from_igraph` :
 
