fix filter of fn

--- a/README.Rmd
+++ b/README.Rmd
@@ -128,7 +128,7 @@ features <- data.frame(Feature = c(
 
 , "![.](https://img.shields.io/badge/{🚧}-bold?style=flat&logoColor=black&logoSize=2&label=Document-level metrics&labelColor=grey&color=yellow)"
 
-, "![.](https://img.shields.io/badge/{🚧}-bold?style=flat&logoColor=black&logoSize=2&label=Function-level metrics&labelColor=grey&color=orange)"
+, "![.](https://img.shields.io/badge/{🚧}-bold?style=flat&logoColor=black&logoSize=2&label=Function-level metrics&labelColor=grey&color=yellow)"
 
 , "![.](https://img.shields.io/badge/{🚧}-bold?style=flat&logoColor=black&logoSize=2&label=Line-level metrics&labelColor=grey&color=green)"
  
